--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <li class="block pl-3 pt-4 text-zinc-500 text-lg">Select a Recipe...</li>
     <li>
       <a href="./recipe-ChipotleChicken.html" class="block p-3"
-        >Adobo Chicken</a
+        >Chipotle Chicken</a
       >
     </li>
     <li>
