--- a/recipe-BirriaBeef.html
+++ b/recipe-BirriaBeef.html
@@ -15,128 +15,156 @@
     <script defer src="./assets/js/recipe.js"></script>
     <script defer src="./assets/js/logic.js"></script>
   </head>
-  <body class="bg-birria bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white">
+  <body
+    class="bg-birria bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white"
+  >
+    <div
+      class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"
+    ></div>
 
-    <div class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"></div>
-
-    <header id="logoBackgroundSmall" class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink">
-      <button id="menuButton" class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded">Menu</button>
-      <img id="logo" src="./assets/logo/YesChefLogoBlack.svg" alt="Yes, Chef Logo" class="relative ml-auto mr-4 h-36"/>
+    <header
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink"
+    >
+      <button
+        id="menuButton"
+        class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded"
+      >
+        Menu
+      </button>
+      <img
+        id="logo"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4 h-36"
+      />
     </header>
 
     <div id="menuContainer"></div>
 
-    <main>
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h1 class="text-4xl font-medium">Birria Shredded Beef</h1>
-      </section>
+    <main
+      class="flex flex-1 flex-col items-center justify-center m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
+    >
+      <h1 class="m-4 text-4xl font-medium">Birria Shredded Beef</h1>
 
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h2>Ingredients:</h2>
+      <p class="m-4 max-w-prose">
+        Birria Shredded Beef is a Mexican dish made from beef slow-cooked in a
+        rich, flavorful broth infused with chili peppers, tomatoes, and spices,
+        resulting in tender, juicy meat that is often used in tacos or served
+        with the broth as a stew.
+      </p>
+
+      <section class="m-4">
+        <h2 class="font-medium text-xl mb-1">Ingredients:</h2>
         <ul>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />5lbs Beef Chuck Roast
-          </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li><input type="checkbox" class="mr-2" />5lbs Beef Chuck Roast</li>
+          <li>
+            <input type="checkbox" class="mr-2" />
             2 Roma Tomatoes
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1/2 Yellow Onion
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             12 Dried Guajillo Chiles
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             5 Ancho Chiles
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             5 Árbol Chiles
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             2 Cups of Beef Broth
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1/4 Cup White Vinegar (Distilled)
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             5 Garlic Cloves
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1 1/2 Tablespoon Olive Oil
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1/2 Tablespoon Kosher Salt
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1/2 Tablespoon Black Pepper
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1 Teaspoon Ground Cumin
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1 Teaspon Dried Mexican Oregano
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1/2 Teaspoon Whole Black Peppercorns
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             1/4 Teaspoon Ground Cloves
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             2 2" Mexican Cinnamon Sticks
           </li>
-          <li class="flex items-center">
-            <input type="checkbox" class="ingredient-checkbox mr-2" />
+          <li>
+            <input type="checkbox" class="mr-2" />
             3 Bay Leaves
           </li>
         </ul>
       </section>
 
-      <section
-        class="flex-grow m-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto"
-      >
+      <section>
         <button
           id="generateShoppingList"
-          class="m-4 p-2 bg-zinc-800/50 dark:bg-white/50 text-white rounded"
+          class="m-4 p-2 bg-zinc-800/70 dark:bg-white/40 text-white rounded"
         >
           Generate Shopping List</button
         ><a
           href="./BirriaBeef.html"
-          class="m-4 p-2 bg-zinc-800/50 dark:bg-white/50 text-white rounded"
+          class="m-4 p-2 bg-zinc-800/70 dark:bg-white/40 text-white rounded"
         >
           I have everything! Let's Cook!
         </a>
-        <p id="errorMessage" class="text-red-500"></p>
+        <p
+          id="errorMessage"
+          class="text-red-500 text-center font-semibold italic"
+        ></p>
       </section>
       <div
-      id="shoppingListModal"
-      class="fixed inset-0 bg-zinc-800 bg-opacity-75 flex items-center justify-center hidden"
-    >
-      <div class="bg-white text-zinc-800 rounded-lg p-6 w-1/2">
-        <h2 class="text-2xl font-medium mb-4">Shopping List</h2>
-        <ul id="shoppingList" class="list-disc list-inside"></ul>
-        <button
-          id="closeModal"
-          class="mt-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+        id="shoppingListModal"
+        class="fixed inset-0 bg-zinc-800 bg-opacity-75 flex items-center justify-center hidden p-4"
+      >
+        <div
+          id="shoppingListModal"
+          class="bg-white text-zinc-800 rounded-lg p-6 w-max mx-auto"
         >
-          Shopping Done!  Let's cook!
-        </button>
+          <h2 class="text-2xl font-medium underline underline-offset-auto m-4">
+            Shopping List:
+          </h2>
+          <ul id="shoppingList" class="list-disc list-inside m-4 p-4"></ul>
+          <button
+            id="closeModal"
+            class="m-4 p-2 bg-gray-800 bg-opacity-50 text-white rounded"
+          >
+            Shopping done... Let's cook!
+          </button>
+        </div>
       </div>
     </main>
   </body>
