--- a/CauliflowerTacos.html
+++ b/CauliflowerTacos.html
@@ -22,84 +22,63 @@
 
       <div id="menuContainer"></div>
 
-    <main>
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h1 class="text-4xl font-medium">Lets Start Cooking Cauliflower Tacos</h1>
-      </section>
+      <main
+      class="flex flex-1 flex-col items-center justify-center m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max max-w-prose mx-auto"
+      >
 
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h2>Cook the Cauliflower:</h2>
-        <article class="indent-5">
-          <p>1. Cook the Cauliflower:</p>
-            <br/>
-          <p>2. Rinse the Cauliflower and cut into bite-sized florets</p>
-            <br />
-          <p>3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili Powder, Paprika, and Salt.</p>
-            <br />
-          <p class="flex flex- items-center">4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min
-            <button id="timer4" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">20 Min Timer</button>
+      <h1 class="m-4 text-4xl font-medium">Lets Start Cooking Cauliflower Tacos</h1>
+
+      <section class="m-4">
+        <h2 class="font-medium text-xl">Cook the Cauliflower:</h2>
+        <ol class="indent-1">
+          <li class="p-2">1. Preheat oven to 400 degrees with one rack in the middle position, and one in the bottom position</li>
+          <li class="p-2">2. Rinse the Cauliflower and cut into bite-sized florets</li>
+          <li class="p-2">3. Toss Cauliflower in a large bowl with the Cumin, Ancho Chili Powder, Paprika, and Salt.</li>
+          <li class="p-2 flex items-center">4. Spread the Cauliflower on a lined baking sheet and place on the bottom rack of the oven to roast for 20min
+            <button id="timer4" class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">20 Min Timer</button>
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                 <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3">check Cauliflower at 20min, if it is not golden brown and tender, roast for another 5min</span> 
             </button>
-          </p>
-          <p class="flex flex- items-center">5. Remove from the Oven, prepare the tacos, and serve as fresh as possible
+          </li>
+          <li class="p-2 flex items-center">5. Remove from the Oven, prepare the tacos, and serve as fresh as possible
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Prepare the taco components before the Cauliflower is done roasting so you can build the tacos and serve immediately</span> 
+              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Prepare the taco components before the Cauliflower is done roasting so you can build the tacos and serve immediately</span> 
             </button>
-          </p>
-        </article>
-      </section>
-
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h3>Make the Chipotle Sauce:</h3>
-        <article class="indent-5">
-          <p>1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.</p>
-            <br />
-          <p class="flex flex- items-center">2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min
-            <button id="timer5" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">8 Min Timer</button>
+          </li>
+        </ol>
+        <h2 class="font-medium text-xl mt-4">Make the Chipotle Sauce:</h2>
+        <ol class="indent-1">
+          <li class="p-2">1. On another lined baking sheet, add the 1/4 cup of Raw Almonds and 4 Garlic Cloves with skin.</li>
+          <li class="p-2 flex items-center">2. Roast the Almonds and Garlic Cloves with Skin on the middle rack for 8min
+            <button id="timer5" class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">8 Min Timer</button>
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                 <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Check at 8min to see if the Almonds are dark and starting to split; if not continue roasting for 2-4 more minutes - do not let the Almonds burn</span> 
             </button>
-          </p>
-          </p>
-            <br />
-          <p>3. When the Almonds and Garlic Cloves with Skin are done roasting, remove them from the oven and set aside</p>
-            <br />
-          <p>4. Drain the can of Fire-Roasted Tomatoes and add to a blender or food processor along with the roasted Almonds, roasted Garlic Cloves (remove skin), raw Garlic Cloves, Avocado Oil, the juice from the Lime, Paprika, Cumin, Salt, Honey, and 1 can of Chipotle Peppers in Adobo sauce</p>
-            <br />
-          <p>5. Blend on high until very smooth</p>
-            <br />
-          <p>6. Chef's unpopular extra step: Put the sauce in the refrigerator so it is cool with put on top of the fresh roasted Cauliflower when the tacos are assembled - it lightly melts the sauce and brings out great flavors while introducing a temperature dynamic to these tacos that have an incredible textual dynamic</p>
-        </article>
-      </section>
-
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h4>Prepare the Taco Components:</h4>
-        <article class="indent-5">
-          <p>1.Slice the Lime to serve wedges alongside the Tacos</p>
-            <br />
-          <p>2. Half, deseed, skin and thinly slice the Avocado</p>
-          <br />
-          <p class="flex flex- items-center">3.Rinse and very thinly slice the Red Cabbage
+          </li>
+          <li class="p-2">3. When the Almonds and Garlic Cloves with Skin are done roasting, remove them from the oven and set aside</li>
+          <li class="p-2">4. Drain the can of Fire-Roasted Tomatoes and add to a blender or food processor along with the roasted Almonds, roasted Garlic Cloves (remove skin), raw Garlic Cloves, Avocado Oil, the juice from the Lime, Paprika, Cumin, Salt, Honey, and 1 can of Chipotle Peppers in Adobo sauce</li>
+          <li class="p-2">5. Blend on high until very smooth</li>
+          <li class="p-2">6. Chef's unpopular extra step: Put the sauce in the refrigerator so it is cool with put on top of the fresh roasted Cauliflower when the tacos are assembled - it lightly melts the sauce and brings out great flavors while introducing a temperature dynamic to these tacos that have an incredible textual dynamic</l>
+        </ol>
+        <h2 class="font-medium text-xl mt-4"">Prepare the Taco Components:</h2>
+        <ol class="indent-1">
+          <li class="p-2">1. Slice the Lime to serve wedges alongside the Tacos</li>
+          <li class="p-2">2. Half, deseed, skin and thinly slice the Avocado</li>
+          <li class="p-2 flex items-center">3.Rinse and very thinly slice the Red Cabbage
             <button class="group flex">
               <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                 <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Also very good if it is cold from the refrigerator at time of plating</span> 
             </button>
-          </p>
-            <br />
-          <p>4. Rinse and dice the Cilantro</p>
-          <br />
-          <p>5. Heat the Tortillas in a pan on the stove</p>
-        </article>
-      </section>
-
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-        <h5>Plating the Tacos:</h5>
-        <article class="indent-5">
-          <p>Put the Cauliflower in a tortilla with a generous portion of the Chipotle Sauce. Sprinkle some Red Cabbage and Cilantro on top. The Avocado can be served in the taco or on the side. Serve with a Lime Wedge. Enjoy!</p>
+          </li>
+          <li class="p-2">4. Rinse and dice the Cilantro</l>
+          <li class="p-2">5. Heat the Tortillas in a pan on the stove</li>
+        </ol>
+        <h2 class="font-medium text-xl mt-4">Plating the Tacos:</h2>
+        <article class="indent-1">
+          <p class="p-2">Put the Cauliflower in a tortilla with a generous portion of the Chipotle Sauce. Sprinkle some Red Cabbage and Cilantro on top. The Avocado can be served in the taco or on the side. Serve with a Lime Wedge. Enjoy!</p>
         </article>
       </section>
     </main>
