--- a/AlPastor.html
+++ b/AlPastor.html
@@ -10,77 +10,148 @@
     <script defer src="./assets/js/tailwind.config.js"></script>
     <script defer src="./assets/js/logic.js"></script>
   </head>
-    <!-- add resizing for webpage -->
-  <body class="bg-chicken bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white">
+  <!-- add resizing for webpage -->
+  <body
+    class="bg-chicken bg-fixed bg-cover bg-contain bg-no-repeat bg-center text-black dark:text-white"
+  >
+    <div
+      class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"
+    ></div>
 
-      <div class="bg-transparent dark:bg-black/20 fixed inset-0 pointer-events-none"></div>
-
-    <header id="logoBackgroundSmall" class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink">
-      <button id="menuButton" class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded">Menu</button>
-      <img id="logo" src="./assets/logo/YesChefLogoBlack.svg" alt="Yes, Chef Logo" class="relative ml-auto mr-4 h-36"/>
+    <header
+      id="logoBackgroundSmall"
+      class="bg-gradient-to-r from-transparent dark:from-transparent to-white/90 dark:to-zinc-800/90 flex-shrink"
+    >
+      <button
+        id="menuButton"
+        class="absolute top-10 left-10 p-2 bg-zinc-800 bg-opacity-30 text-white dark:text-zinc-300 rounded"
+      >
+        Menu
+      </button>
+      <img
+        id="logo"
+        src="./assets/logo/YesChefLogoBlack.svg"
+        alt="Yes, Chef Logo"
+        class="relative ml-auto mr-4 h-36"
+      />
     </header>
 
-      <div id="menuContainer"></div>
+    <div id="menuContainer"></div>
 
-  <main>
-    <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-      <h1 class="text-4xl font-medium">Let's Start Cooking Al Pastor</h1>
-    </section>
+    <main
+      class="flex flex-1 flex-col items-center justify-center m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max max-w-prose mx-auto"
+    >
+      <h1 class="m-4 text-4xl font-medium">Let's Start Cooking Al Pastor</h1>
 
-    <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-      <h1>Prepare the Pork:</h1>
-      <article class="indent-5">
-        <p>1. Pound the Pork slices so they are even thickness.</p>
-        <br />
-        <p>2. Place them in the refrigerator until it is time to cook.</p>
-      </article>
-    </section>
-
-    <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-      <h2>Prepare the marinade:</h2>
-      <article class="indent-5">
-        <p>1. In a pan over medium heat, lightly brown the onions and garlic in olive oil.</p>
-        <br />
-        <p>2. Once lightly browned, add the seeded and stemmed guajillo chiles and bay leaves. Saute for 1-2 minutes.
-          <button id="timer10" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">2 Min Timer</button>
-        </p>
-        <br />
-        <p>3. Add 1/4 of water, and the 1/4 cup of Apple Cider Vinegar.</p>
-        <p>4. Cover on low heat for 10 minutes, then turn off heat and let it cool.</p>
-        <p>5. Pour contents of the pan into the blender with the spices (Salt, Cumin, Oregano, Black Pepper, and All Spice), Chipotle Chiles, Chicken Stock, and Pineapple Juice, and blend until very smooth.</p>
-        <br />
-        <p class="flex flex- items-center">6. Pour the contents of the blender through a fine-mesh strainer into a large bowl. Push the blended marinade through the strainer until no liquid remains. Discard the solids.
-          <button class="group flex">
-            <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3">You can also keep the solids to make an incredible salsa...</span> 
-          </button></p>
-        <p>7. Mix the Pork slices into the large bowl of marinade until they are coated. Cover and put back into the refrigerator to marinate for 4-24 hours.
-          <button id="timer11" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">24 Hour Timer</button>
-        </p>
-      </article>
-    </section>
-
-    <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-      <h3>Cook the Pork:</h3>
-      <article class="indent-5">
-        <p class="flex flex- items-center">1. Preheat your bbq grill to as hot as possible.
-          <button class="group flex">
-            <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-              <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">A little char of the marinade on the pork brings out incredible flavors</span> 
-        </button></p>
-        <br />
-        <p>2. Cook the Pork on the grill until an internal temperature of 160 degrees</p>
-        <br />
-        <p>3. Slice and cook Pineapple slices on the grill alongside the Pork for best flavor</p>
-        <br />
-        <p>4. Once cooked fully, remove the Pork from the Grill and let it rest for a minimum of 10 minute
-          <button id="timer12" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button></p>
-        </p>
-        <br />
-        <p>5. Dice the Pork and Pineapple. Serve in tacos, burritos, or any of your other favorite meals.</p>
-      </article>
-    </section>
-  </main>
-  <script src="./assets/js/AlPastor.js"></script>
+      <section class="m-4">
+        <h2 class="font-medium text-xl">Prepare the Pork:</h2>
+        <ol type="1" class="indent-1">
+          <li class="p-2">
+            1. Pound the Pork slices so they are even thickness.
+          </li>
+          <li class="p-2">
+            2. Place them in the refrigerator until it is time to cook.
+          </li>
+        </ol>
+        <h2 class="font-medium text-xl mt-4">Prepare the marinade:</h2>
+        <ol class="indent-1">
+          <li class="p-2">
+            1. In a pan over medium heat, lightly brown the onions and garlic in
+            olive oil.
+          </li>
+          <li class="p-2">
+            2. Once lightly browned, add the seeded and stemmed guajillo chiles
+            and bay leaves. Saute for 1-2 minutes.
+            <button
+              id="timer10"
+              class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
+            >
+              2 Min Timer
+            </button>
+          </li>
+          <li class="p-2">
+            3. Add 1/4 of water, and the 1/4 cup of Apple Cider Vinegar.
+          </li>
+          <li class="p-2">
+            4. Cover on low heat for 10 minutes, then turn off heat and let it
+            cool.
+          </li>
+          <li class="p-2">
+            5. Pour contents of the pan into the blender with the spices (Salt,
+            Cumin, Oregano, Black Pepper, and All Spice), Chipotle Chiles,
+            Chicken Stock, and Pineapple Juice, and blend until very smooth.
+          </li>
+          <li class="p-2 flex items-center">
+            6. Pour the contents of the blender through a fine-mesh strainer
+            into a large bowl. Push the blended marinade through the strainer
+            until no liquid remains. Discard the solids.
+            <button class="group flex">
+              <img
+                src="./assets/logo/YesChefFavicon180.png"
+                alt="Chef note"
+                class="max-w-8 m-2"
+              />
+              <span
+                class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3"
+                >You can also keep the solids to make an incredible
+                salsa...</span
+              >
+            </button>
+          </li>
+          <li class="p-2">
+            7. Mix the Pork slices into the large bowl of marinade until they
+            are coated. Cover and put back into the refrigerator to marinate for
+            4-24 hours.
+            <button
+              id="timer11"
+              class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
+            >
+              24 Hour Timer
+            </button>
+          </li>
+        </ol>
+        <h2 class="font-medium text-xl mt-4">Cook the Pork:</h2>
+        <ol class="indent-1">
+          <li class="p-2 flex items-center">
+            1. Preheat your bbq grill to as hot as possible.
+            <button class="group flex">
+              <img
+                src="./assets/logo/YesChefFavicon180.png"
+                alt="Chef note"
+                class="max-w-8 m-2"
+              />
+              <span
+                class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3"
+                >A little char of the marinade on the pork brings out incredible
+                flavors</span
+              >
+            </button>
+          </li>
+          <li class="p-2">
+            2. Cook the Pork on the grill until an internal temperature of 160
+            degrees
+          </li>
+          <li class="p-2">
+            3. Slice and cook Pineapple slices on the grill alongside the Pork
+            for best flavor
+          </li>
+          <li class="p-2">
+            4. Once cooked fully, remove the Pork from the Grill and let it rest
+            for a minimum of 10 minute
+            <button
+              id="timer12"
+              class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
+            >
+              10 Min Timer
+            </button>
+          </li>
+          <li class="p-2">
+            5. Dice the Pork and Pineapple. Serve in tacos, burritos, or any of
+            your other favorite meals.
+          </li>
+        </ol>
+      </section>
+    </main>
+    <script src="./assets/js/AlPastor.js"></script>
   </body>
 </html>
