--- a/ChipotleChicken.html
+++ b/ChipotleChicken.html
@@ -20,88 +20,72 @@
       <img id="logo" src="./assets/logo/YesChefLogoBlack.svg" alt="Yes, Chef Logo" class="relative ml-auto mr-4 h-36"/>
     </header>
 
-      <div id="menuContainer"></div>
+    <div id="menuContainer"></div>
 
-      <main>
+    <main
+      class="flex flex-1 flex-col items-center justify-center m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max max-w-prose mx-auto"
+    >
 
-        <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-          <h1 class="text-4xl font-medium">Let's Start Cooking Adobo Chicken</h1>
-        </section>
+      <h1 class="m-4 text-4xl font-medium">Let's Start Cooking Chipotle Chicken</h1>
   
-        <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-          <h2>Marinate the chicken thighs:</h2>
-          <article class="indent-5">
-            <p class="flex flex- items-center">
+      <section class="m-4">
+          <h2 class="font-medium text-xl">Marinate the chicken thighs:</h2>
+          <ol type="1" class="indent-1">
+            <li class="p-2 flex items-center">
               1. Place the Chicken Thighs in a resealable bag, or large bowl.
               <button class="group flex">
                 <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                   <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">poke a few holes in the Chicken Thighs with a fork for even better results</span> 
               </button>
-            
               </button>  
-            </p>
-              <br />
-            <p>2.Cover the Chicken Thighs in a generous amount of the marinade
-            </p>
-              <br />
-            <p>3.Seal the bag or the bowl and place in the refrigerator</p>
-              <br />
-            <p class="flex flex- items-center">
+            </li>
+            <li class="p-2">2. Cover the Chicken Thighs in a generous amount of the marinade</li>
+            <li class="p-2">3. Seal the bag or the bowl and place in the refrigerator</li>
+            <li class="p-2 flex flex- items-center">
               4. Allow the meat to marinate for at least an hour.
-              <button id="timer1" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">1 Hour Timer</button>
-                <button class="group flex">
+              <button id="timer1" class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">1 Hour Timer</button>
+              <button class="group flex">
                   <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-                    <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3">it is best if it is allowed to marinate overnight</span> 
+                  <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3">it is best if it is allowed to marinate overnight</span> 
                 </button>
-            </p>
-        </article>
-          <br />
-      </section>
-
-      <section class="m-4 p-4 bg-white/90 dark:bg-zinc-800/90 text-zinc-900 dark:text-white rounded w-max mx-auto">
-          <h3>Cook the Chicken Thighs</h3>
-            <br />
-          <article class="indent-5">
-            <p class="flex flex- items-center">
-              1. Remove the Chicken Thighs from the refrigerator.
+            </li>
+          </ol>
+        <h2 class="font-medium text-xl mt-4">Cook the Chicken Thighs</h2>
+          <ol class="indent-1">
+            <li class="p-2 flex items-center">1. Remove the Chicken Thighs from the refrigerator.
               <button class="group flex-inline relative">
                 <button class="group flex">
                   <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                     <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Set the bowl or resealable bag out on the counter for 30-45min before cooking</span> 
               </button>
-            </p>
-              <br />
-            <p class="flex flex- items-center">
+            </li>
+            <li class="p-2 flex items-center">
               2. Preheat your BBQ grill before cooking.
               <button class="group flex">
                 <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
                   <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the hotter the better, as getting a little char on the marinade really brings out the flavor</span> 
               </button>
-            </p>
-              <br />
-            <p>3. Sear the Chicken Thighs 2min per side on the hot grill 
-              <button id="timer2" class="top-10 left-10 p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">2 Min Timer</button></p>
-              <br />
-            <p class="flex items-center">
-              4. Cook the Chicken Thighs until they are cooked through; 165-175
-              degrees internal temperature.
-                <button class="group flex">
-                  <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-                    <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Chicken Thighs cook rather quickly on a hot grill, so keep a close eye on them</span> 
+            </li>
+            <li class="p-2">3. Sear the Chicken Thighs 2min per side on the hot grill 
+              <button id="timer2" class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">2 Min Timer</button>
+            </li>
+            <li class="p-2 flex items-center">4. Cook the Chicken Thighs until they are cooked through; 165-175 degrees internal temperature.
+              <button class="group flex">
+                <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">Chicken Thighs cook rather quickly on a hot grill, so keep a close eye on them</span> 
               </button>
-            </p>
-              <br />
-            <p class="flex flex- items-center">
+            </li>
+            <li class="p-2 flex items-center">
               5. Let the Chicken Thighs rest for 10 minutes after they have been
               cooked, then serve in your favorite tacos, burritos, or as a
               stand-alone meat with your meal.
-              <button id="timer3" class="p-1 bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button>
-                <button class="group flex">
-                  <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
-                    <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the Chicken Thighs will continue to cook while they rest, so make sure you plan for that in your cooking time and temperature</span> 
-                </button>
-            </p>
-          </article>
+              <button id="timer3" class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2">10 Min Timer</button>
+              <button class="group flex">
+                <img src="./assets/logo/YesChefFavicon180.png" alt="Chef note" class="max-w-8 m-2">
+                <span class="group-hover:opacity-75 bg-white text-sm text-black rounded-lg absolute opacity-0 m-3 ">the Chicken Thighs will continue to cook while they rest, so make sure you plan for that in your cooking time and temperature</span> 
+              </button>
+            </li>
+          </ol>
         </section>
       </main>
     <script src="./assets/js/cooking.js"></script>
