--- a/AlPastor.html
+++ b/AlPastor.html
@@ -65,9 +65,7 @@
             <button
               id="timer10"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              2 Min Timer
-            </button>
+            >2 Min Timer</button>
           </li>
           <li class="p-2">
             3. Add 1/4 of water, and the 1/4 cup of Apple Cider Vinegar.
@@ -105,9 +103,7 @@
             <button
               id="timer11"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              24 Hour Timer
-            </button>
+            >24 Hour Timer</button>
           </li>
         </ol>
         <h2 class="font-medium text-xl mt-4">Cook the Pork:</h2>
