--- a/BirriaBeef.html
+++ b/BirriaBeef.html
@@ -110,9 +110,7 @@
             <button
               id="timer8"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              10 Min Timer
-            </button>
+            >10 Min Timer</button>
           </li>
           <li class="p-2 flex items-center">
             7. After 10min, using a slotted spoon, transfer the ingredients to a
@@ -155,9 +153,7 @@
             <button
               id="timer9"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              3 1/2 Hour Timer
-            </button>
+            >3 1/2 Hour Timer</button>
           </li>
           <li class="p-2">
             4. Remove the Chuck Roast, shred, and return to the Dutch Oven
