--- a/CarneAsada.html
+++ b/CarneAsada.html
@@ -95,9 +95,7 @@
             <button
               id="timer6"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              24 Hour Timer
-            </button>
+            >24 Hour Timer</button>
           </li>
           <li class="p-2">5. Flip the meat in the marinade halfway through</li>
         </ol>
@@ -140,9 +138,7 @@
             <button
               id="timer7"
               class="p-1 text-nowrap bg-zinc-800/80 dark:bg-white text-white dark:text-zinc-800 text-sm rounded m-2"
-            >
-              10 Min Timer
-            </button>
+            >10 Min Timer</button>
           </li>
           <li class="p-2">
             5. Serve with sliced Lime wedges from the remaining lime, and diced
